# ms-rag-pipeline

./: .gitignore  10ms rag pipeline.json  README.md  main.py  pyproject.toml  rag.ipynb  rag.py  requirements.txt  retriver.txt
config/: settings.py
data/faiss_index/: index.faiss  index.pkl
data/multi/faiss_index/: index.faiss  index.pkl
src/: document_processing.py  embedding_process.py  llm_chain.py  vector_storage.py
