[project]
name = "ms-rag-pipline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-openai>=0.3.28",
    "marimo>=0.14.12",
    "pip>=25.1.1",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
]
